# velamq-bench

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: release.yml
docs/: api.md  bench-agent-deployment.md  distributed-benchmark-plan.md  redesign-plan.md  web-console-guide.md
docs/deploy/: velamq-bench-agent.service
docs/plan/: 00-design-overview.md  01-pr1-domain-model.md  02-pr2-runtime-api.md  03-pr3-frontend-shell.md  04-pr4-scenario-builder.md  05-pr5-run-detail-charts.md  06-pr6-compare-baseline.md  07-pr7-payload-broker-profiles.md  08-pr8-export-i18n-polish.md  README.md
src/: bench.rs  cluster.rs  export.rs  lib.rs  main.rs  storage.rs
src/model/: broker.rs  cluster.rs  legacy.rs  load.rs  mod.rs  payload.rs  run.rs  scenario.rs  workload.rs
src/runtime/: load_clock.rs  mod.rs  sampler.rs  sse.rs
src/storage/: backfill.rs
src/storage/migrations/: 0001_initial.sql  0002_scenarios.sql  0003_runs_v2.sql  0004_annotations.sql  0005_broker_protocol.sql  0006_broker_connection_options.sql  0007_agent_nodes.sql  0008_agent_tasks.sql  0009_distributed_runs.sql  0010_agent_task_telemetry.sql
web/: .eslintrc.cjs  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/locales/: en.json  zh-CN.json
web/scripts/: check-a11y.mjs  check-i18n.mjs
web/src/: App.vue  main.ts
web/src/api/: client.ts  types.ts
web/src/composables/: useCompareData.ts  useI18n.ts  useRunDetail.ts  useToast.ts
web/src/pages/: Compare.vue  Dashboard.vue  DistributedRunDetail.vue  Nodes.vue  Placeholder.vue  RunDetail.vue  (+5 more)
(+40 files in other folders)
